    (e.g. in Debian, the package "python-lmfit" is required)
  - Improves behavior at parameter boundaries
  - Removed "Polak-Ribiere" fitting algorithm
  - Added "Sequential Linear Squares Programming" algorithm
- Heuristic fit:
  - Detect parameters that are stuck during fitting
  - Fit each curve five times or less and check
    whether the fit converges.
- New model: confocal T+T+3D+3D
- Bugfixes:
  - Sessions saved with 64bit Windows were not opened (#136)
0.9.2
- Bugfixes:
  - "Slider Simulation"/"Parm Range" broken (#133)
  - Computation of average intensity did not work
    correctly for unequally spaced traces
- Update .pt3 reader to version 8399ff7401
- Import traces of .pt3 files (#118)
  Warning: Absolute values for intensity might be wrong
0.9.1
- Tool 'Overlay curves': improve UI (#117)
- Tool 'Statistics view': improve UI (#113)
- Tool 'Trace view': display countrate (#121)
- Bugfixes:
  - Unicode errors in statistics tool (#131)
  - Load session errors with empty pages
0.9.0
- Improve parameter display (#52, #114)
- Display Chi2 on each page (#115)
- The displayed Chi2-value for non-weighted fits is now
  normalized to the expected values of the fit. The
  documentation has been updated accordingly.
- Add "All files" option in save dialogs (#97)
- Improved plot export dialog (#99)
0.8.9
- Improved support for "ALV-7004" files (#104)
- Increase resolution for image export
- Load weights from PyCorrFit csv files 
- Tool 'Overlay Curves': show cropped correlation curves
- Tool 'Trace view': increase size of window (#93)
- Tool 'Global fitting': remove forced, joint weights
- Session comment dialog: more intuitive behavior (#116)
- Improve plot export (#95)
- Bugfixes:
   - Weighted fits at borders of fit interval were
     computed incorrectly due to integer division
   - Fitting algorithms did not work (#94)
   - Creating averages did not work (#123)
   - ASCII errors in statistics tool (#112)
- Under the hood: