@@ -14,6 +14,8 @@ import numpy as np
 
 from .. import edclasses  # edited floatspin
 from .. import models as mdls
+from .. import wxutils
+
 
 
 class RangeSelector(wx.Frame):
@@ -49,7 +51,7 @@ class RangeSelector(wx.Frame):
         leftbound = []
         for item in corr.fit_parameters_range[:,0]:
             if item is None:
-                leftbound.append(1e15)
+                leftbound.append(-np.inf)
             else:
                 leftbound.append(item)
         labels, parmleft = mdls.GetHumanReadableParms(corr.fit_model.id,  # @UnusedVariable
@@ -57,7 +59,7 @@ class RangeSelector(wx.Frame):
         rightbound = []
         for item in corr.fit_parameters_range[:,1]:
             if item is None:
-                rightbound.append(1e15)
+                rightbound.append(np.inf)
             else:
                 rightbound.append(item)
         
@@ -67,11 +69,10 @@ class RangeSelector(wx.Frame):
         self.parameter_range[:,1] = np.array(parmright)
         # create line
         
-        # = wx.BoxSizer(wx.VERTICAL)
         self.WXboxsizer = wx.FlexGridSizer(rows=len(labels), cols=4, vgap=5, hgap=5)
         for i in range(len(labels)):
-            left = floatspin.FloatSpin(self.panel, digits=7, increment=.1)
-            right = floatspin.FloatSpin(self.panel, digits=7, increment=.1)
+            left = wxutils.PCFFloatTextCtrl(self.panel)
+            right = wxutils.PCFFloatTextCtrl(self.panel)
             left.SetValue(self.parameter_range[i][0])
             right.SetValue(self.parameter_range[i][1])
             left.Bind(wx.EVT_SPINCTRL, self.OnSetParmRange)
